build.gradle: UseConcMarkSweepGC, latest libraries, Linux cleanup