@@ -1,6 +1,6 @@
 apply plugin: 'java'
 
-// select a source-code option
+// select one source-code option
 //sourceCompatibility = '1.7'
 sourceCompatibility = '1.8'
 
@@ -11,9 +11,15 @@ gradle.projectsEvaluated {
         options.deprecation = true
         options.encoding = 'UTF-8'
     }
+    tasks.withType(JavaExec) {
+        classpath sourceSets.main.runtimeClasspath
+        //debug true
+        enableAssertions true
+        jvmArgs '-XX:+UseConcMarkSweepGC'
+    }
 }
 
-// select a version of the Engine
+// select one version of the Engine
 ext.jmonkeyengineVersion = '3.2.1-stable' // from jcenter
 //ext.jmonkeyengineVersion = '3.2.1-SNAPSHOT' // from mavenLocal
 
@@ -25,41 +31,42 @@ jar.manifest.attributes(
 )
 
 repositories {
+    //mavenLocal()
     maven { url 'https://dl.bintray.com/stephengold/jme3utilities' }
     maven { url 'https://dl.bintray.com/stephengold/org.jmonkeyengine' }
     maven { url 'https://dl.bintray.com/stephengold/tonegod' }
     jcenter()
-    //mavenLocal()
+    //mavenCentral()
 }
 
 dependencies {
     // from stephengold's bintray repositories:
     compile 'tonegod:tonegodgui:0.1.0'
-    compile 'jme3utilities:jme3-utilities-debug:0.8.9'
-    compile 'jme3utilities:jme3-utilities-ui:0.6.3'
+    compile 'jme3utilities:jme3-utilities-debug:0.8.10'
+    compile 'jme3utilities:jme3-utilities-heart:2.6.1'
+    compile 'jme3utilities:jme3-utilities-ui:0.6.4'
     compile 'jme3utilities:jme3-utilities-x:0.2.4'
     runtime 'org.jmonkeyengine:jme3-testdata:3.1.0-stable'
 
     // from jcenter (or mavenLocal) repositories:
-    compile "org.jmonkeyengine:jme3-blender:${jmonkeyengineVersion}"
-    runtime "org.jmonkeyengine:jme3-lwjgl:${jmonkeyengineVersion}"
-    runtime "org.jmonkeyengine:jme3-plugins:${jmonkeyengineVersion}"
-    compile "org.jmonkeyengine:jme3-terrain:${jmonkeyengineVersion}"
+    compile "org.jmonkeyengine:jme3-blender:$jmonkeyengineVersion"
+    runtime "org.jmonkeyengine:jme3-lwjgl:$jmonkeyengineVersion"
+    runtime "org.jmonkeyengine:jme3-plugins:$jmonkeyengineVersion"
+    compile "org.jmonkeyengine:jme3-terrain:$jmonkeyengineVersion"
 }
 
 // cleanup tasks
-clean { dependsOn 'cleanDLLs', 'cleanWrittenAssets' }
+clean { dependsOn 'cleanDLLs', 'cleanSOs', 'cleanWrittenAssets' }
 task cleanDLLs(type: Delete) {
     delete fileTree(dir: '.', include: '*.dll')
+}
+task cleanSOs(type: Delete) {
+    delete fileTree(dir: '.', include: '*.so')
 }
 task cleanWrittenAssets(type: Delete) {
     delete 'Written Assets'
 }
 
-tasks.withType(JavaExec) {
-    classpath sourceSets.main.runtimeClasspath
-    enableAssertions true
-}
 task runAssetProcessor(type: JavaExec) {
     main 'jme3maze.AssetProcessor'
 }
